@@ -4,6 +4,7 @@
 		- Move channel cycling to POE::Component::IRC
 		- Use Config::Any instead of YAML::Syck
 		- Exit cleanly when sent TERM/INT signals
+		- Rename auto_cycle option to cycle_empty
 
 0.2.3 Wed Jan 30 05:01:30 GMT 2008
     - Fix silly versioning blunder
